<resources>
    <string name="app_name">Inventory Tracking</string>
    <string name="login_button">Login</string>
    <string name="create_button">Create User</string>
    <string name="username_field">Enter Username</string>
    <string name="password_field">Enter Password</string>
    <string name="app_title">Digital Warehouse Inventory Tracking</string>
    <string name="quantity">Quantity</string>
    <string name="qty">x</string>
    <string name="confirm">Confirm</string>
    <string name="delete">Delete</string>
    <string name="delete_item">Delete item</string>
    <string name="item_details">Item Details</string>
    <string name="item_image">Item image</string>
    <string name="item_name">Item Name</string>
    <string name="adds_new_item_to_inventory">Adds new item to inventory</string>
    <string name="inventory_title">Inventory</string>
    <string name="inventory_header">Inventory</string>
    <string name="inventory_permission_message">This app needs permission to send SMS messages. Permissions are used to send notifications about inventory stock levels.</string>
    <string name="grant_sms_permission_button">Grant SMS Permission</string>
    <string name="sms_notifications_header">SMS Notifications</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="increment_item_description">Increment item by one</string>
    <string name="decrement_item_description">Decrement item by one</string>
    <string name="exit_button_description">Exit dialog window</string>
    <string name="decline_sms">Decline</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="exit">Exit</string>
    <string name="menu">Menu</string>
    <string name="toggle_layout">Toggle Layout</string>
    <string name="item_category">Item Category</string>
    <string name="theme">Theme</string>
    <string name="category">Category:</string>
    <string name="category_field">Category</string>
    <string name="item_price">Item Price</string>
    <string name="price">Price: $</string>
    <string name="Sku">Sku</string>
    <string name="sku">Sku:</string>
    <string name="sort_by">Sort by</string>
    <string name="name">Name</string>
    <string name="date_added">Date added</string>
    <string name="price_field">Price</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="apply">Apply</string>
    <string name="details">Details</string>
    <string name="sms_alerts">SMS Alerts</string>
    <string name="font_size">Font Size</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="system">System</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="sms_permissions">Sms Permissions</string>
    <string name="item_name_label">Name:</string>
    <string name="largePricePlaceHolder">$9,999.99+</string>


</resources>