<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginHorizontal="24dp"
    android:layout_marginVertical="32dp"
    android:orientation="vertical"
    android:padding="24dp"
    style="@style/DialogBackground"
    android:clipToPadding="false">

    <EditText
        android:id="@+id/item_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColor="?attr/colorOnSurface"
        android:textColorHint="?attr/colorOnSurface"
        android:textSize="22sp"
        android:gravity="center_horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_image"
        android:maxWidth="200dp"
        android:hint="@string/item_details"
        android:layout_marginTop="30dp" />

    <View
        android:id="@+id/image_background"
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:background="@drawable/rectangle_background"
        app:layout_constraintTop_toTopOf="@id/item_image"
        app:layout_constraintBottom_toBottomOf="@id/item_image"
        app:layout_constraintStart_toStartOf="@id/item_image"
        app:layout_constraintEnd_toEndOf="@id/item_image"/>

    <ImageView
        android:id="@+id/item_image"
        android:layout_width="230dp"
        android:layout_height="230dp"
        android:layout_marginTop="52dp"
        app:tint="@color/forest_green_dark"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/add_photo"
        android:clickable="true"
        android:contentDescription="@string/item_image" />


    <Button
        android:id="@+id/confirm_button"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:text="@string/confirm"
        app:cornerRadius="6dp"
        app:layout_constraintTop_toBottomOf="@id/item_quantity"
        android:layout_marginTop="35dp"

        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/exit_button"
        android:layout_width="55dp"
        android:layout_height="50dp"
        android:padding="15dp"
        app:icon="@drawable/close"
        app:iconSize="25dp"
        app:cornerRadius="6dp"
        android:layout_marginTop="-15dp"
        android:layout_marginStart="-15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/exit_button_description"/>

    <Button
        android:id="@+id/decrement_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        app:cornerRadius="4dp"
        app:icon="@drawable/decrement"
        android:padding="13dp"
        app:iconSize="25dp"
        app:layout_constraintBottom_toBottomOf="@id/item_quantity"
        app:layout_constraintStart_toEndOf="@id/item_quantity"
        app:layout_constraintTop_toTopOf="@id/item_quantity"
        app:layout_constraintEnd_toEndOf="@id/confirm_button"
        android:contentDescription="@string/decrement_item_description"/>

    <Button
        android:id="@+id/increment_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        app:cornerRadius="4dp"
        app:icon="@drawable/increment"
        app:iconSize="25dp"
        android:padding="13dp"
        app:layout_constraintBottom_toBottomOf="@id/item_quantity"
        app:layout_constraintEnd_toStartOf="@id/item_quantity"
        app:layout_constraintTop_toTopOf="@id/item_quantity"
        app:layout_constraintStart_toStartOf="@id/delete_button"
        android:contentDescription="@string/increment_item_description"/>

    <EditText
        android:id="@+id/item_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="5"
        android:gravity="center_horizontal"
        android:hint="@string/quantity"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColor="?attr/colorOnSurface"
        android:textColorHint="?attr/colorOnSurface"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_details" />

    <Button
        android:id="@+id/delete_button"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:text="@string/delete"
        app:cornerRadius="6dp"
        app:layout_constraintTop_toBottomOf="@id/item_quantity"
        android:layout_marginTop="35dp"

        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>