<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:id="@+id/rootLayout">

        <TextView
            android:id="@+id/sms_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sms_notifications_header"
            android:textSize="24sp"
            android:textStyle="bold"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


        <TextView
            android:id="@+id/sms_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/inventory_permission_message"
            android:textSize="16sp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/sms_header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            tools:ignore="VisualLintLongText" />


        <Button
            android:id="@+id/grant_sms_permission_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grant_sms_permission_button"
            android:layout_marginBottom="32dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <Button
            android:id="@+id/decline_sms_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/decline_sms"
            android:layout_marginBottom="32dp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>